[package]
authors = ["Joel Imbergamo Guasch <joelimgu@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "black-pill-test"
version = "0.1.0"

[dependencies]
cortex-m-semihosting = "0.3.3"

cortex-m = "^0.6.3"      # Access to the generic ARM peripherals
cortex-m-rt = "^0.6.12"  # Startup code for the ARM Core
embedded-hal = "^0.2.4"  # Access to generic embedded functions (`set_high`)
panic-halt = "^0.2.0"    # Panic handler


nb = "0.1"
drs-0x01 = "0.3.0"

[dependencies.replace_with]
version = "0.1.7"
default-features = false
features = ["panic_abort"]

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt", "medium"]
version = "^0.6.1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "black-pill-test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

